Digital/objects/Placement_Content__c.object
<CustomObject>
    <label>Placement Content</label>
    <nameField>
        <label>Placement Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placement Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>AB_Test_Name__c</fullName>
        <label>AB Test Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_Product_Preview_IDs__c</fullName>
        <inlineHelpText>Add previewID,publishedID,stackIds and product count in the following format.previewID:&lt;enter preview ID from HIPPO here&gt;,publishedID:&lt;enter published ID from HIPPO here&gt;,stackIds:&lt;Enter all stack ids here&gt;,cards:&lt;Enter card count here&gt;,products:&lt;enter pr</inlineHelpText>
        <label>API Product Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_Copy__c</fullName>
        <inlineHelpText>Enter copy for App specific placements. This would usually be populated only on OSL type placements.</inlineHelpText>
        <label>App Copy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>TEXT(Placement_Layout__r.Brands__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Page_Url__c</fullName>
        <inlineHelpText>Add collection page URLs for collection Header and collection cue placements.  Enter URL without live site details. For e.g. enter “/vs/newarrivals/shop-collection” without “https://victoriassecret.com/”</inlineHelpText>
        <label>Collection Page Url</label>
        <length>20768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compared_Placement_Layout__c</fullName>
        <formula>Placement_Layout__r.Compared_Placement_Layout__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compared Placement Layout</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compare_Type__c</fullName>
        <label>Compare Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <inlineHelpText>Select the type of the content from the drop down. E.g. Image, Dynamic, Video</inlineHelpText>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Carousel</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                    <default>true</default>
                    <label>Image</label>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
                <value>
                    <fullName>API Product feed</fullName>
                </value>
                <value>
                    <fullName>Custom Build</fullName>
                    <isActive>false</isActive>
                    <label>Custom Build</label>
                </value>
                <value>
                    <fullName>ImageText</fullName>
                    <isActive>false</isActive>
                    <label>ImageText</label>
                </value>
                <value>
                    <fullName>Offer Spotlight</fullName>
                    <isActive>false</isActive>
                    <label>Offer Spotlight</label>
                </value>
                <value>
                    <fullName>Popup</fullName>
                    <isActive>false</isActive>
                    <label>Popup</label>
                </value>
                <value>
                    <fullName>Site Majority Offer</fullName>
                    <isActive>false</isActive>
                    <label>Site Majority Offer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copy_Image__c</fullName>
        <inlineHelpText>This is for the copy writers to enter verbiage  for offer/non-offer.</inlineHelpText>
        <label>Copy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_Formula__c</fullName>
        <formula>Placement_Layout__r.Date_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Editorial_Name__c</fullName>
        <formula>Placement_Layout__r.Collection_Page_Name__c</formula>
        <label>Editorial Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_Layout_Type__c</fullName>
        <formula>TEXT(Placement_Layout__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Layout Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouped__c</fullName>
        <inlineHelpText>Select group start/group end to show placements in grid view</inlineHelpText>
        <label>Grouped</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group Start</fullName>
                </value>
                <value>
                    <fullName>Group End</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Unapproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Unapproved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImagePath__c</fullName>
        <label>ImagePath</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Image_Link__c</fullName>
        <label>Image Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <inlineHelpText>Upload one or more screen cap(s) of a product image to be featured on site</inlineHelpText>
        <label>CAD/Shot/Screen Cap</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JIRA_Project_Link__c</fullName>
        <description>This field is used to AB Test content only, to provide JIRA project link/details</description>
        <label>JIRA Project Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KOD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select one or more approved KODs if the placement is an offer type. Use search icon in the dropdown to filter further.</inlineHelpText>
        <label>KOD</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>KOD__c.Offer_Status__c</field>
                <operation>equals</operation>
                <value>APPROVED</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>KOD__c</referenceTo>
        <relationshipLabel>Placement Content</relationshipLabel>
        <relationshipName>Placement_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Commented_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Commented by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Placement_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Commented_on__c</fullName>
        <label>Last Commented on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Layout_Type__c</fullName>
        <label>Layout Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Main_Message__c</fullName>
        <inlineHelpText>Enter concise main message for the placement. Used as placement identifier everywhere.</inlineHelpText>
        <label>Main Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Placement_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Placement Content</label>
        <referenceTo>Placement_Content__c</referenceTo>
        <relationshipLabel>Placement Content (Next Placement Content)</relationshipLabel>
        <relationshipName>Placement_Content2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Additional product notes or instructions can be added here</inlineHelpText>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <inlineHelpText>Select if the placement is offer/non offer from the drop down. If placement is an offer type then select KODs in the next field</inlineHelpText>
        <label>Offer/Non-offer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Non Offer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Page_Name__c</fullName>
        <label>Page Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Page</fullName>
                </value>
                <value>
                    <fullName>Landing Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Content_Name__c</fullName>
        <formula>Parent_Content__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Content Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used to related the Test and Contingency placements with the parent placements.</description>
        <label>Parent Content</label>
        <referenceTo>Placement_Content__c</referenceTo>
        <relationshipLabel>Placement Content (Parent Content)</relationshipLabel>
        <relationshipName>Parent_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placement_Content_Self__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement Content Self</label>
        <referenceTo>Placement_Content__c</referenceTo>
        <relationshipLabel>Placement Content</relationshipLabel>
        <relationshipName>Placement_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placement_Layout__c</fullName>
        <label>Placement Layout</label>
        <referenceTo>Placement_Layout__c</referenceTo>
        <relationshipLabel>Placement Content</relationshipLabel>
        <relationshipName>Placement_Content</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Placement_Library__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Placement Library</label>
        <referenceTo>Placement_Library__c</referenceTo>
        <relationshipLabel>Placement Content</relationshipLabel>
        <relationshipName>Placement_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placement_Page_Type__c</fullName>
        <formula>TEXT(Placement_Layout__r.Page_Types__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Page Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement_type__c</fullName>
        <inlineHelpText>Select the type of placement from the drop down. E.g. Banner, Cue, feature, Site Majority Offer etc.</inlineHelpText>
        <label>Placement type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Cue</fullName>
                </value>
                <value>
                    <fullName>Site Majority Offer</fullName>
                </value>
                <value>
                    <fullName>Floating Cue/Collection Cue</fullName>
                </value>
                <value>
                    <fullName>Collection Header</fullName>
                </value>
                <value>
                    <fullName>Stack Header</fullName>
                </value>
                <value>
                    <fullName>Product Page Header</fullName>
                </value>
                <value>
                    <fullName>Offer Copy</fullName>
                </value>
                <value>
                    <fullName>OLCO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <inlineHelpText>Enter position number for the placements to show in a sequence in layout. Leave empty for non-floating cue placements.</inlineHelpText>
        <label>Position</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Placement_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Placement Content</label>
        <referenceTo>Placement_Content__c</referenceTo>
        <relationshipLabel>Placement Content (Previous Placement Content)</relationshipLabel>
        <relationshipName>Placement_Content1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_list__c</fullName>
        <inlineHelpText>Enter document name for associating product list for Auto Takedown</inlineHelpText>
        <label>Product list</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Projected__c</fullName>
        <label>Projected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Row_Start__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check the box if the placement should display in its own row on the mosaic view</inlineHelpText>
        <label>Row Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shot_Number__c</fullName>
        <inlineHelpText>Enter product shot number from DAM, if available. Typically used for creative direction. Use commas to separate for multiple shot numbers.</inlineHelpText>
        <label>Shot Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Placements__c</fullName>
        <label>Site Placements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Offer_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Collection Page Header</fullName>
                </value>
                <value>
                    <fullName>Floating Cue</fullName>
                </value>
                <value>
                    <fullName>Offer Spotlight</fullName>
                </value>
                <value>
                    <fullName>Product Page Header</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Style_Info__c</fullName>
        <inlineHelpText>Enter information about the product and it&#39;s description including styles numbers</inlineHelpText>
        <label>Style Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_No__c</fullName>
        <label>S No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Period__c</fullName>
        <formula>TEXT(Placement_Library__r.Start_Date__c) + &#39; &#39; +  IF(CONTAINS(TEXT(Placement_Library__r.Start_Time__c),&quot;AM&quot;),  TRIM(LEFT(TEXT(Placement_Library__r.Start_Time__c), LEN(TEXT(Placement_Library__r.Start_Time__c)) - 2)) + &#39;:&#39;+TEXT(Placement_Library__r.Start_Minute__c) + &#39; AM&#39; , LEFT(TEXT(Placement_Library__r.Start_Time__c), LEN(TEXT(Placement_Library__r.Start_Time__c)) - 2) + TEXT(Placement_Library__r.Start_Minute__c) + &#39; PM&#39;) + 
&#39; - &#39; + 
TEXT(Placement_Library__r.End_Date__c) + &#39; &#39; +  IF(CONTAINS(TEXT(Placement_Library__r.End_Time__c),&quot;AM&quot;), TRIM(LEFT(TEXT(Placement_Library__r.End_Time__c), LEN(TEXT(Placement_Library__r.End_Time__c)) - 2)) + &#39;:&#39;+TEXT(Placement_Library__r.End_Minute__c) + &#39; AM&#39; , LEFT(TEXT(Placement_Library__r.End_Time__c), LEN(TEXT(Placement_Library__r.End_Time__c)) - 2) + TEXT(Placement_Library__r.End_Minute__c) + &#39; PM&#39;)</formula>
        <label>Time Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Controlled</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>Takedown</fullName>
                </value>
                <value>
                    <fullName>AB Test</fullName>
                </value>
                <value>
                    <fullName>Contingency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Field__c</fullName>
        <label>Unique Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <validationRules>
        <fullName>Collection_Page_URL_mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISPICKVAL(  Placement_Layout__r.Page_Types__c  , &quot;LTO&quot;),
ISBLANK(Collection_Page_Url__c)
)</errorConditionFormula>
        <errorMessage>Collection Page URL is mandatory!!</errorMessage>
    </validationRules>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Escalation_Content</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Escalation</value>
        </filters>
        <label>Escalation Content</label>
    </listViews>
</CustomObject>